--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 <body>
   <main>
     <div class="title-container">
-      <p class="title">
-        <span>Reliable, efficient delivery</span> <br>
+      <p class="title li">Reliable, efficient delivery</p>
+      <p class="title dark">
         Powered by Technology
       </p>
       <p class="subtitle">
